# dfraw_parser

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_QUICK_REFERENCE.md  DOCUMENTATION_REFERENCE.md  DOCUMENTATION_SUMMARY.md  README.md  db.sqlite3
cli/: Cargo.toml  example.ps1  example.sh  win-example.sh
cli/src/: main.rs
db/: Cargo.toml  db.sqlite3  diesel.toml
db/migrations/2024-11-26-155540_info_file/: up.sql
db/migrations/2024-11-27-151533_metadata/: up.sql
db/src/: lib.rs  schema.patch  schema.rs
db/src/models/: author.rs  color.rs  directory.rs  gait.rs  info_file.rs  location.rs  metadata.rs  mod.rs  module.rs  object_type.rs  steam_data.rs
jsonlib/: Cargo.toml
jsonlib/bindings/: DFRawJson.d.ts  DFRawParser.d.ts
jsonlib/src/: bindings.rs  lib.rs
jsonlib/tests/: bindings.rs
lib/: Cargo.toml  build.rs
lib/db/migrations/: 001_init-database.sqlite.sql  002_seed-biomes.sqlite.sql  003_seed-caste-tags.sqlite.sql  004_complex-value-table.sqlite.sql  01_init-database.sqlite.sql  03_seed-caste-tags.sqlite.sql  database.dbml  starting-database.dbml
lib/db/migrations/001_init-database/: down.sql  up.sql
lib/db/migrations/002_seed-biomes/: down.sql
lib/db/migrations/003_seed-caste-tags/: down.sql
lib/db/migrations/003_seed-object-types/: down.sql  up.sql
lib/db/migrations/004_seed-caste-tags/: down.sql  up.sql
lib/db/migrations/005_raw-module-location/: down.sql  up.sql
lib/db/migrations/006_condition/: down.sql  up.sql
lib/db/migrations/007_gait-type/: down.sql  up.sql
lib/src/: constants.rs  default_checks.rs  lib.rs  utilities.rs
lib/src/database/: migrate.rs  mod.rs  sqlite.rs
lib/src/database/data/: mod.rs
lib/src/definitions/: caste.rs  creature.rs  creature_effect.rs  creature_variation.rs  custom_graphic_extension.rs  entity.rs  graphic.rs  graphic_palette.rs  inorganic.rs  material.rs  material_mechanics.rs  material_template.rs  mechanical_properties.rs  module_info.rs  plant.rs  plant_growth.rs  position.rs  seed_material.rs  select_creature.rs  shrub.rs  sprite_graphic.rs  sprite_layer.rs  syndrome.rs  tile_page.rs  tree.rs
lib/src/definitions/custom_types/: amount.rs  body_gloss_definition.rs  body_part_position.rs  body_part_specifier.rs  body_size.rs  color.rs  mod.rs  name.rs  part_specifier.rs  sound_context.rs  sound_event.rs  sphere.rs  steam_data.rs  temperatures.rs  tile.rs  tissue_shape.rs
lib/src/definitions/into_raw_string/: entity.rs  inorganic.rs
lib/src/definitions/raw_object/: creature.rs  creature_variation.rs  entity.rs  graphic.rs  inorganic.rs  material_template.rs  tile_page.rs
lib/src/definitions/searchable/: caste.rs  creature.rs  plant.rs
lib/src/definitions/tokens/: audio.rs  body.rs  body_detail_plan.rs  caste.rs  color_modification.rs  condition.rs  creature.rs  creature_effect.rs  creature_effect_property.rs  creature_variation.rs  environment_class.rs  gait_modifier.rs  graphic_type.rs  growth.rs  inorganic.rs  mod.rs  module_info.rs  plant_graphic_template.rs  plant_growth.rs  plant_growth_type.rs  season.rs  sphere.rs  steam_workshop.rs  symbol.rs  syndrome.rs  tile_page.rs  tissue.rs  tree.rs
lib/src/legends_export/: reader.rs  util.rs
lib/src/legends_export/exports/: creature.rs  entity.rs
lib/src/metadata/: location_helper.rs  mod.rs  numeric_token.rs  object_type.rs  parser_options.rs  raw_location.rs  raw_metadata.rs  raw_object.rs
lib/src/parsed_definitions/: body_size.rs  caste.rs  color.rs  creature.rs  creature_effect.rs  creature_variation.rs  custom_graphic_extension.rs  dimensions.rs  entity.rs  gait.rs  graphic.rs  graphic_palette.rs  info_file.rs  inorganic.rs  material.rs  material_mechanics.rs  material_template.rs  mechanical_properties.rs  milkable.rs  mod.rs  module_info.rs  name.rs  plant.rs  plant_growth.rs  position.rs  seed_material.rs  select_creature.rs  shrub.rs  sprite_graphic.rs  sprite_layer.rs  state_names.rs  steam_data.rs  syndrome.rs  temperatures.rs  tile.rs  tile_page.rs  tree.rs
lib/src/parsed_definitions/custom_types/: body_size.rs  color.rs  dimensions.rs  habit_count.rs  mod.rs  name.rs  tile.rs  tile_char.rs
lib/src/parsed_definitions/into_raw_string/: creature.rs  creature_variation.rs  entity.rs  (+7 more)
lib/src/parser/: info_file.rs  parse.rs  raw_module.rs  results.rs
lib/src/raw_definitions/: mod.rs
lib/src/reader/: header.rs  parsable_types.rs  parse_file.rs  unprocessed_raw.rs
lib/src/traits/: cleanable.rs  database_compatability.rs  is_empty.rs  mod.rs  numeric_tokens.rs  raw_object.rs  raw_object_token.rs  raw_token.rs  searchable.rs  tag_operations.rs  to_raw_string.rs  token_parser.rs
lib/src/utilities/: biome_tag_lookup.rs  caste_tag_flags.rs  caste_tag_lookup.rs  caste_tag_numeric_tokens.rs  condition_tag_lookup.rs  creature_effect_property_tag_lookup.rs  creature_effect_tag_lookup.rs  creature_tag_flags.rs  creature_tag_lookup.rs  creature_tag_numeric_token.rs  creature_variation_tag_lookup.rs  entity_tag_lookup.rs  file_operations.rs  mod.rs  object_id.rs  object_type_lookup.rs  plant_growth_tag_lookup.rs  plant_growth_type_tag_flags.rs  plant_growth_type_tag_lookup.rs  plant_part_tag_lookup.rs  plant_tag_flags.rs  plant_tag_lookup.rs  searchable.rs  steam_directory_lookup.rs  user_directory_lookup.rs
lib/src/views/: caste.rs  creature.rs  mod.rs
lib/tests/: test_location_helper.rs
sqlite_lib/: .gitignore  Cargo.toml  schema.sql  test.db
sqlite_lib/src/: client.rs  lib.rs  numeric_filter.rs  search_helpers.rs  search_query.rs  search_results.rs  util.rs
sqlite_lib/src/db/: client.rs  client_options.rs  compression.rs  graphics_data.rs  init.rs  metadata.rs  metadata_markers.rs  migrate.rs  mod.rs  rusqlite_extensions.rs  search_query.rs  search_results.rs  util.rs
sqlite_lib/src/db_init/: caste.rs  color.rs  creature.rs  creature_variation.rs  initialize.rs  metadata.rs  misc.rs  mod.rs  reference.rs  tile.rs
sqlite_lib/src/queries/: mod.rs
sqlite_lib/tests/: db_tests.rs  search_tests.rs  sqlite-db.rs  test_db_creation.rs
sqlite_lib/tests/common/: mod.rs
(+287 files in other folders)
