[package]
name = "dfraw_json_parser-cli"
version = "1.3.0"
edition = "2024"
readme = "README.md"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "CLI for parsing Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
lexopt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
fern= { workspace = true, features = ["colored"] }
dfraw_json_parser= { workspace = true }
