[package]
name = "dfraw_json_parser"
version = "0.17.5"
edition = "2021"
readme = "README.md"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "Library which parses Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

[lib]
name = "dfraw_json_parser"
path = "src/lib.rs"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
serde_json = "1.0"
tracing = "0.1.40"
typetag = "0.2"
walkdir = "2"
specta-typescript = "0.0.9"

[dependencies.specta]
version = "2.0.0-rc.22"
features = ["derive"]

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]

[dependencies.dfraw_parser]
path = "../lib"
version = "0"
