[package]
name = "dfraw_json_parser"
version = "0.17.5"
edition = "2024"
readme = "README.md"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "Library which parses Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

[lib]
name = "dfraw_json_parser"
path = "src/lib.rs"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
typetag = { workspace = true }
walkdir = { workspace = true }
specta-typescript = { workspace = true }
specta= { workspace = true, features = ["derive"] }
serde= { workspace = true, features = ["derive"] }
dfraw_parser= { workspace = true }
