[package]
name = "dfraw_parser"
version = "0.18.0"
edition = "2021"
readme = "README.md"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "Library which parses Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

[lib]
name = "dfraw_parser"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Used to be able to force reading the raw files as Latin1.
encoding_rs = "0.8.34"
# Used to be able to force reading the raw files as Latin1 (has a BuffReader we use).
encoding_rs_io = "0.1"
itertools = "0.13.0"
# Generates static/reusabled regex for parsing the raw text files.
lazy-regex = "3.1.0"
# Used for making a shared static ref to the Latin1 encoding.
once_cell = "1.19.0"
# Quick-xml is used to parse legends export files.
quick-xml = "0.35.0"
# We slugify the names of the raw files to make them easier to work with.
slug = "0.1.5"
# Create iterators from enums
strum = "0.27"
strum_macros = "0.27"
# Error type creation helper.
thiserror = "1"
# Tracing is used for logging.
tracing = "0.1.40"
# Typetag is a helper for serializing traits
typetag = "0.2"
# Walkdir used to go through the directories and files recursively.
walkdir = "2.5.0"

# Serde used to serialize and deserialize our parsed data.
[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]

# Our lookup tables for RAW_TOKENS to RawTokens are generated with phf.
[dependencies.phf]
version = "0.11.2"
default-features = true
features = ["macros"]


# Specta is used for generating TypeScript bindings. And whatever bindings specta supports in the future.
[dependencies.specta]
version = "2.0.0-rc.22"
default-features = true
features = ["derive"]
