[package]
name = "dfraw_parser"
version = "0.18.0"
edition = "2024"
readme = "README.md"
authors = ["Nicholas Westerhausen <nick@westmail.cc>"]
description = "Library which parses Dwarf Fortress raw files into JSON"
repository = "https://github.com/nwesterhausen/dfraw_json_parser.git"
license = "MIT"
homepage = "https://github.com/nwesterhausen/dfraw_json_parser"
keywords = ["dwarf_fortress", "JSON", "parsing"]
categories = ["parsing"]

[lib]
name = "dfraw_parser"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
dfraw_parser_proc_macros = {workspace = true}
# directories used to find data directory and home directory on linux
directories = { workspace = true }
# Used to be able to force reading the raw files as Latin1.
encoding_rs = { workspace = true }
# Used to be able to force reading the raw files as Latin1 (has a BuffReader we use).
encoding_rs_io = { workspace = true }
itertools = { workspace = true }
# Generates static/reusabled regex for parsing the raw text files.
lazy-regex = { workspace = true }
# Used for making a shared static ref to the Latin1 encoding.
once_cell = { workspace = true }
# Quick-xml is used to parse legends export files.
quick-xml = { workspace = true }
# We slugify the names of the raw files to make them easier to work with.
slug = { workspace = true }
# Create iterators from enums
strum = { workspace = true }
strum_macros = { workspace = true }
# Error type creation helper.
thiserror = { workspace = true }
# Tracing is used for logging.
tracing = { workspace = true }
# Typetag is a helper for serializing traits
typetag = { workspace = true }
# Walkdir used to go through the directories and files recursively.
walkdir = { workspace = true }
# For serializing and deserializing
serde= { workspace = true, features = ["derive"] }
# For type binding generation
specta= { workspace = true, features = ["derive"] }
# For creating static hashmaps
phf= { workspace = true, features = ["macros"] }

# Windows: Registry access
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
