[package]
name = "dfraw_parser_sqlite_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "blob"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dfraw_parser = { workspace = true }
specta = {workspace = true}

[dev-dependencies]
tracing-subscriber = { workspace = true }
test_util = { workspace = true }

[lints]
workspace = true
