[package]
name = "dfraw_parser_sqlite_lib"
version = "0.2.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "blob"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dfraw_parser = { workspace = true }
specta = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
uuid = { workspace = true, features = ["v5", "serde"] }
itertools.workspace = true
strum.workspace = true
ciborium = "0.2.2"
zstd = "0.13.3"
anyhow = "1.0.100"

[dev-dependencies]
tracing-subscriber = { workspace = true }
dfraw_parser_test_util = { workspace = true }

[lints]
workspace = true
